# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.928 2009-07-14 11:25:03 sb Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

2.4.0 beta6 (2009/07/??)
 - (2009/07/14) Fixed bug#3976 - AgentTicketBounce does not work when
    Frontend::RichText is disabled.
 - (2009/07/13) Updated Russian translation, thanks to Mike Lykov!
 - (2009/07/13) Updated Italian translation, thanks to Remo Catelotti!
 - (2009/07/13) Fixed bug#3975 - New Dashboard Featrue: SQL of Upcoming Events
    (for pending remidner time) is not using database index, index on
    until_time is missing. Use scripts/DBUpdate-to-2.4.*.sql for upgrading.
 - (2009/07/13) Fixed bug#3972 - Sub Kernel::System::TicketOwnerCheck() gives
    wrong result if asked for different TicketIDs in one TicketObject.
 - (2009/07/13) Updated Persian translation, thanks to Amir Shams Parsa!
 - (2009/07/13) Updated Dutch translation, thanks to Michiel Beijen!
 - (2009/07/13) Fixed bug#3790 - POP3S doesn't fail when IO::Socket::SSL is not
    installed or mail server address is wrong.
 - (2009/07/13) Improved dashboard api / module layer to load content changes
    via AJAX / no compiled dashboard reload is needed.
 - (2009/07/11) Added new dashboard backend to show online agent and customers.
 - (2009/07/11) Improved dashboard api / module layer (added Preferences() to
    API to get/modify config settings of backend at runtime).
 - (2009/07/11) Fixed bug#3967 - Unable to create notes by using GenericAgent
    (Error: Need Charset!).
 - (2009/07/11) Fixed bug#3965 - New TicketOverview S/M/L feature: Last used
    ticket view mode get't only stored in current session but get lost after
    new relogin.
 - (2009/07/11) Fixed bug#3964 - Update script is not working correctly (Can't